# kubalyst

./: .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  test.py  test.sh
.github/workflows/: python-package.yml
k8s/: help  main.py
k8s/charts/: trino.py  trino_config.py
k8s/test/: test_synth.py
query_cli/: README.md  cli.py  main.py  query_cli  requirements3.txt  services.py
query_cli/entities/: roles.py  users.py
query_cli/kube_utils/: forward.py
query_cli/orgdata/: entities.py  service.py
query_cli/query/: cli.py  services.py
query_cli/query_service/: models.py  service.py
query_cli/ranger/: policy.py  service.py  service2.py
query_cli/s3/: service.py
query_cli/trino/: client.py  query.py  service.py
setup/: docker-entrypoint.sh  env.sh  es_deployment.yaml  fix-k8s-paths.py  kube_commands.sh  maria_deployment.yaml  metastore.yaml  minio_dev.yaml  postgres_deployment.yaml  ranger_admin.yaml  redis.yaml  restart_sqlpad.sh  spark-accounts.yaml  spark.yaml  sqlpad.yaml  start_services.sh  trino-cfgs.yaml  trino-ranger-cfgs.yaml  trino-ranger.yaml  trino.yaml
setup/hive-metastore/: README.md
setup/hive-metastore-docker/: Dockerfile  build_image.sh
setup/ranger-admin/: Dockerfile  build_image.sh  entrypoint.sh  install_mysql.properties  install_postgres.properties
setup/trino/: Dockerfile  build_image.sh  docker-entrypoint.sh  trino-ranger-install.properties
setup/trino-ranger-demo/: README.md  docker-compose.yml  output.txt
(+44 files in other folders)
